--- a/index.html
+++ b/index.html
@@ -298,9 +298,7 @@
             }
             
             const testCommands = [
-                '^XA^FO50,50^A0N,25,25^FDTest 1^FS^XZ',
-                '^XA^FO50,50^A0N,25,25^FDTest Móvil^FS^XZ',
-                '^XA^FO50,50^A0N,25,25^FDHola Mundo^FS^XZ'
+                '^XA^FDHola^FS^XZ',
             ];
             
             for (const cmd of testCommands) {
