--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         </div>
         
         <div class="test-group">
-            <h3>📤 Comandos Personalizados</h3>
-            <input type="text" id="customCmd" placeholder="Comando ZPL" value="^XA^FO50,50^A0N,30,30^FDTest Móvil^FS^XZ">
+            <h3>📤 Comandos Personalizados actulziado Version I</h3>
+            <input type="text" id="customCmd" placeholder="Comando ZPL" value=" ^XA^FDHola^FS^XZ">
             <button onclick="sendCustom()">📤 Enviar</button>
         </div>
         
