--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
   <br><br>
 
   <!-- Impresión desde Android (Bluetooth) -->
-  <a href="intent:#Intent;action=com.zebra.printconnect.intent.action.PRINT;S.com.zebra.printconnect.intent.extra.FORMAT_TYPE=ZPL;S.com.zebra.printconnect.intent.extra.FORMAT_DATA=%5EXA%5EFO50%2C50%5EADN%2C36%2C20%5EFDDesde%20el%20celular%5EFS%5EXZ;end">
-    Imprimir desde Android con Bluetooth
-  </a>
-
+<a href="intent:#Intent;action=com.zebra.printconnect.intent.action.PRINT;S.com.zebra.printconnect.intent.extra.FORMAT_TYPE=ZPL;S.com.zebra.printconnect.intent.extra.FORMAT_DATA=%5EXA%0A%5EFO100%2C100%0A%5EADN%2C36%2C20%0A%5EFDTEST%20DESDE%20INTENT%0A%5EFS%0A%5EXZ;end">
+  Imprimir prueba desde Android
+</a>
   <script>
     function imprimirEtiqueta() {
       BrowserPrint.getDefaultDevice("printer", function(printer) {
